<resources>
    <string name="app_name">Searcher</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_create_channel">Create Channel</string>
    <string name="title_activity_edit_channel">Edit Channel</string>
    <string name="title_activity_detail_channel">Detail Channel</string>

    <string name="channel_title_form_hint">Title</string>
    <string name="channel_description_form_hint">Description</string>
    <string name="channel_size_form_hint">Size</string>

    <string name="channel_create_form">Create</string>
    <string name="channel_edit_form">Edit</string>

    <string name="category_spinner_title">Select Category</string>

    <string name="channel_detail_destroy">Destroy</string>
    <string name="channel_detail_edit">Edit</string>
    <string name="channel_detail_leave">Leave</string>
    <string name="channel_detail_join">Join</string>
</resources>
