<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.searcher.activity.EditChannelActivity"
    tools:showIn="@layout/activity_edit_channel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/channel_title_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/channel_title_form_hint"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text" />

                <EditText
                    android:id="@+id/channel_description_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/channel_description_form_hint"
                    android:maxLength="256"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text" />

            </LinearLayout>
        </ScrollView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/channel_category_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/category_spinner_title"
                    android:textColor="@color/text" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/channel_size_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/channel_size_form_hint"
                    android:inputType="number"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/channel_image_preview_form_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/channel_image_preview_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/channel_image_pick_form"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:radius="5dip"
                    android:text="Select Image"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/channel_button_form"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:radius="5dip"
                    android:text="@string/channel_edit_form"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</ScrollView>
